# DE-Zoomcamp-24

./: .gitignore  DockerCheatsheat.md  README.md  pyproject.toml
module1/: Dockerfile  README.md  docker-compose.ingest.yml  docker-compose.yml  ingest_data.py  main.tf  test.ipynb
module2/: README.md
module2/airflow/: Dockerfile  docker-compose.yaml
module2/airflow/dags/: data_ingestion_gcs_dag.py
module2/local_ingestion/: Dockerfile  README.md  docker-compose.yaml
module2/local_ingestion/dags/: local_ingestion.py
module2/local_ingestion/scripts/: ingest_script.py
module2/temp/: template_variables.tf
